[package]
name = "rustimage"
version = "0.1.0"
authors = ["Nathaniel R. Lewis <linux.robotdude@gmail.com>"]
edition = "2018"

#[lib]
#name = "rustimage"
#crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
