[package]
name = "rustimage"
version = "0.1.0"
authors = ["Nathaniel R. Lewis <linux.robotdude@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
panic = "abort"
opt-level = "z"

[profile.release]
panic = "abort"
opt-level = "z"
