[package]
name = "rustimage"
version = "0.1.0"
authors = ["Nathaniel R. Lewis <linux.robotdude@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.ufmt]
version = "0.1"

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.linked_list_allocator]
version = "0.8.0"

[profile.dev]
panic = "abort"
opt-level = "z"

[profile.release]
panic = "abort"
opt-level = "z"
debug = true
lto = true
